--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "react-select": "^5.3.0",
     "react-table": "^7.7.0",
     "recharts": "^2.1.9",
     "typescript": "^4.6.2",
