--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.6.10",
     "firebase-tools": "^10.6.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
